# artifacts/api-server/src/routes/index.ts
@@ -4,7 +4,6 @@ import authRouter from "./auth";
 import usersRouter from "./users";
 import postsRouter from "./posts";
 import storiesRouter from "./stories";
-import commentsRouter from "./comments";
 import likesRouter from "./likes";
 import notificationsRouter from "./notifications";
 import messagesRouter from "./messages";
@@ -18,7 +17,6 @@ router.use(authRouter);
 router.use(usersRouter);
 router.use(postsRouter);
 router.use(storiesRouter);
-router.use(commentsRouter);
 router.use(likesRouter);
 router.use(notificationsRouter);
 router.use(messagesRouter);
