# lib/db/src/schema/index.ts
@@ -2,7 +2,6 @@ export * from "./users";
 export * from "./posts";
 export * from "./hashtags";
 export * from "./stories";
-export * from "./comments";
 export * from "./likes";
 export * from "./follows";
 export * from "./notifications";
